Work for https://jira.jboss.org/jira/browse/JBID-217 "STSSecurityHandler: Improve exception/fault handling."
git-svn-id: https://svn.jboss.org/repos/picketlink/federation/trunk@122 cbddccc4-e45a-42eb-be77-0d76e4b45d38